# CCPP_base

./: .gitignore  CMakeLists.txt  arraypointer_pointerarray.c  dynamic_memory.c  first.c  funtions.c  funtions_pointer.c  homework.c  leak_mm.c  leak_mm_test.c  main.c  memory_leak.h  pointer_strengthen.c  structlearning.c  test.c
file/: myfile.c  test.txt
string/: mystring.c
