cmake_minimum_required(VERSION 3.15)
project(CCPP_base)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.c)
add_executable(first first.c)
add_executable(structlearning structlearning.c)
add_executable(test test.c)
add_executable(fun funtions.c)
add_executable(dynamic_memory dynamic_memory.c)
add_executable(funtions_pointer funtions_pointer.c)
add_executable(leak_mm memory_leak.h leak_mm.c leak_mm_test.c)
add_executable(pointer_strengthen pointer_strengthen.c)
add_executable(arraypointer_pointerarray arraypointer_pointerarray.c)
add_executable(string string/mystring.c)